--- a/MultiMediaStyle.css
+++ b/MultiMediaStyle.css
@@ -470,6 +470,112 @@ body.dark .search-field i {
   color: #900d09;
   animation: rotate 0.7s ease-in-out both;
 }
+.ui-checkbox {
+  --primary-color: #1677ff;
+  --secondary-color: #fff;
+  --primary-hover-color: #4096ff;
+  /* checkbox */
+  --checkbox-diameter: 15px;
+  --checkbox-border-radius: 4px;
+  --checkbox-border-color: #d9d9d9;
+  --checkbox-border-width: 1px;
+  --checkbox-border-style: solid;
+  /* checkmark */
+  --checkmark-size: 1.3;
+}
+
+.ui-checkbox,
+.ui-checkbox *,
+.ui-checkbox *::before,
+.ui-checkbox *::after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.ui-checkbox {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: var(--checkbox-diameter);
+  height: var(--checkbox-diameter);
+  border-radius: var(--checkbox-border-radius);
+  background: var(--secondary-color);
+  border: var(--checkbox-border-width) var(--checkbox-border-style)
+    var(--checkbox-border-color);
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+  cursor: pointer;
+  position: relative;
+}
+
+.ui-checkbox::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  -webkit-box-shadow: 0 0 0 calc(var(--checkbox-diameter) / 2.5)
+    var(--primary-color);
+  box-shadow: 0 0 0 calc(var(--checkbox-diameter) / 2.5) var(--primary-color);
+  border-radius: inherit;
+  opacity: 0;
+  -webkit-transition: all 0.5s cubic-bezier(0.12, 0.4, 0.29, 1.46);
+  -o-transition: all 0.5s cubic-bezier(0.12, 0.4, 0.29, 1.46);
+  transition: all 0.5s cubic-bezier(0.12, 0.4, 0.29, 1.46);
+}
+
+.ui-checkbox::before {
+  top: 40%;
+  left: 50%;
+  content: "";
+  position: absolute;
+  width: 4px;
+  height: 7px;
+  border-right: 2px solid var(--secondary-color);
+  border-bottom: 2px solid var(--secondary-color);
+  -webkit-transform: translate(-50%, -50%) rotate(45deg) scale(0);
+  -ms-transform: translate(-50%, -50%) rotate(45deg) scale(0);
+  transform: translate(-50%, -50%) rotate(45deg) scale(0);
+  opacity: 0;
+  -webkit-transition: all 0.1s cubic-bezier(0.71, -0.46, 0.88, 0.6),
+    opacity 0.1s;
+  -o-transition: all 0.1s cubic-bezier(0.71, -0.46, 0.88, 0.6), opacity 0.1s;
+  transition: all 0.1s cubic-bezier(0.71, -0.46, 0.88, 0.6), opacity 0.1s;
+}
+
+/* actions */
+
+.ui-checkbox:hover {
+  border-color: var(--primary-color);
+}
+
+.ui-checkbox:checked {
+  background: var(--primary-color);
+  border-color: transparent;
+}
+
+.ui-checkbox:checked::before {
+  opacity: 1;
+  -webkit-transform: translate(-50%, -50%) rotate(45deg)
+    scale(var(--checkmark-size));
+  -ms-transform: translate(-50%, -50%) rotate(45deg)
+    scale(var(--checkmark-size));
+  transform: translate(-50%, -50%) rotate(45deg) scale(var(--checkmark-size));
+  -webkit-transition: all 0.2s cubic-bezier(0.12, 0.4, 0.29, 1.46) 0.1s;
+  -o-transition: all 0.2s cubic-bezier(0.12, 0.4, 0.29, 1.46) 0.1s;
+  transition: all 0.2s cubic-bezier(0.12, 0.4, 0.29, 1.46) 0.1s;
+}
+
+.ui-checkbox:active:not(:checked)::after {
+  -webkit-transition: none;
+  -o-transition: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  transition: none;
+  opacity: 1;
+}
 
 @keyframes rotate {
   0% {
@@ -524,14 +630,14 @@ body.dark .search-field i {
   font-family: "Poppins", sans-serif;
 }
 
-#sortDropdownButton {
+/* #sortDropdownButton {
   background-color: var(--body-color);
   font-weight: bold;
   color: var(--text-color);
   margin: 1rem;
   font-size: 20px;
   line-height: 1.3;
-}
+} */
 
 @media (max-width: 580px) {
   .filter-title-general {
@@ -572,7 +678,6 @@ body.dark .search-field i {
   border-radius: 12px 12px 12px 12px;
   box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
@@ -580,7 +685,6 @@ body.dark .search-field i {
   transition-duration: 0.3s;
   -webkit-transition-property: box-shadow, transform;
   transition-property: box-shadow, transform;
-  display: flex;
   height: 525px;
   flex-direction: column;
   position: relative;
@@ -716,21 +820,47 @@ body.dark .search-field i {
   margin-left: 1rem;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 840px) {
+  .movie-item {
+    min-width: 240px;
+    height: 350px;
+  }
+  .movie-poster {
+    height: 100%;
+    margin: 0;
+    border-radius: 12px;
+  }
+  h1 {
+    margin-left: 10px;
+    font-size: 26px;
+  }
+  .movie-title {
+    display: none;
+  }
+  .movie-rating {
+    display: none;
+  }
+  .action-circle {
+    display: none !important;
+  }
+
   .container {
     padding: 10px;
   }
 
   #movie-list {
     grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
-    gap: 10px;
+    gap: 12px;
   }
 }
 
 @media (max-width: 580px) {
+  .content {
+    padding: 0;
+  }
   .movie-item {
-    min-width: 160px;
-    height: 275px;
+    min-width: 185px;
+    height: 281px;
   }
   .movie-poster {
     height: 100%;
@@ -750,6 +880,13 @@ body.dark .search-field i {
   }
   .action-circle {
     display: none !important;
+  }
+}
+
+@media (max-width: 390px) {
+  .movie-item {
+    min-width: 170px;
+    height: 270px;
   }
 }
 
@@ -813,11 +950,11 @@ body.dark .search-field i {
   opacity: 0;
   pointer-events: none;
   box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
-  transition: 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
 .action-circle .icon:hover .tooltip {
-  top: -58px;
+  top: -55px;
   opacity: 1;
   pointer-events: auto;
 }
@@ -829,9 +966,9 @@ body.dark .search-field i {
   width: 10px;
   background: #fff;
   left: 50%;
-  bottom: -6px;
+  bottom: -5px;
   transform: translateX(-50%) rotate(45deg);
-  transition: 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
 .action-circle .icon:hover span {
@@ -1087,6 +1224,12 @@ body.dark .search-field i {
   font-size: 20px;
   cursor: pointer;
   color: var(--text-color);
+  transition: 0.3s;
+}
+
+.sidebar .closebtn:hover {
+  color: #900d09;
+  transform: scale(1.05);
 }
 
 .sidebar .filter-group {
@@ -1226,11 +1369,15 @@ body.dark .search-field i {
 body > nav:nth-child(3) > ul {
   margin-top: 25px;
 }
+.pagination {
+  margin-top: 1.5rem;
+}
 /* Target the page link inside the pagination */
 .pagination .page-link {
   background-color: var(--body-color);
   color: var(--text-color);
   border: 1px solid #888787;
+  z-index: -10;
 }
 
 /* Target the "Previous" and "Next" buttons */
