--- a/ProfilePageStyle.css
+++ b/ProfilePageStyle.css
@@ -1,46 +1,20 @@
+@import url("https://fonts.googleapis.com/css2?family=Ultra&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Konkhmer+Sleokchher&display=swap");
-@font-face {
-  font-family: "Header";
-  src: url(Fonts/Lobster-Regular.ttf);
-}
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 
 body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-height: 100vh;
+  height: 100vh;
   margin: 0;
   padding: 0;
-  background: #101010 !important;
-}
-
-.container {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.wrapper-container {
-  position: absolute; /* Set the container to absolute position */
-  top: 50%; /* Move it to the vertical center */
-  left: 50%; /* Move it to the horizontal center */
-  transform: translate(-50%, -50%); /* Center the container perfectly */
-}
-
-@import url("https://fonts.googleapis.com/css2?family=Ultra&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Konkhmer+Sleokchher&display=swap");
-@font-face {
-  font-family: "Header";
-  src: url(Fonts/Lobster-Regular.ttf);
+  font-family: Arial, sans-serif;
+  background-color: var(--body-color) !important;
 }
 
 /*-------------------------------Start Side Scroll------------------------------------------- */
-
 html {
   scrollbar-width: normal;
   scrollbar-color: #777 #0000002a;
@@ -67,20 +41,11 @@ html::-webkit-scrollbar-track {
 html::-webkit-scrollbar-track:hover {
   background-color: #555;
 }
-
 /*-----------------------------End Side Scroll------------------------------------------- */
-
-body {
-  font-family: Arial, sans-serif;
-  height: 100vh;
-  background-color: var(--body-color);
-}
-/* ===== Google Font Import - Poppins ===== */
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 
 /* ===== Colours ===== */
 :root {
-  --body-color: #f7f7f7;
+  --body-color: #101010;
   --nav-color: #17181c;
   --side-nav: #17181c;
   --text-color: #17181c;
@@ -376,6 +341,7 @@ body.dark .search-field i {
     margin-top: 20px;
   }
 }
+
 .user-pic {
   width: 35px;
   border-radius: 50%;
@@ -394,6 +360,7 @@ body.dark .search-field i {
   transition: max-height 0.4s;
   z-index: 1; /* Set a higher z-index to ensure the dropdown menu appears on top */
 }
+
 .sub-menu-wrap.open-menu {
   max-height: 500px;
 }
@@ -411,6 +378,7 @@ body.dark .search-field i {
   color: #fff;
   word-spacing: 5px;
 }
+
 .user-info h2 {
   font-size: 24px;
   text-align: center;
@@ -459,10 +427,12 @@ body.dark .search-field i {
   padding: 8px;
   margin-right: 15px;
 }
+
 .sub-menu-link span {
   font-size: 22px;
   transition: transform 0.5s;
 }
+
 .sub-menu-link:hover span {
   transform: translateX(5px);
 }
@@ -472,35 +442,31 @@ body.dark .search-field i {
 }
 
 .welcome-box {
-  padding-top: 180px;
-  background: url(./images/Backgrounds/movieposter.jpg);
+  background: url(https://wallpapers.com/images/featured/movie-9pvmdtvz4cb0xl37.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   position: absolute;
   width: 100%;
   height: 50%;
+  filter: brightness(50%);
 }
 
-.welcome-box img {
-  filter: blur(50px);
+.container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.welcom-container {
-  width: auto;
-  margin-top: 0;
-}
-
-.welcome-text {
-  font-size: 32px;
-  font-family: "Konkhmer Sleokchher", cursive;
-  text-align: center;
-  letter-spacing: 1px;
-  margin-bottom: 0;
-  color: #fff;
-}
-
-.welcome-text p {
-  margin-bottom: 0;
+.wrapper-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  /*   position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); */
 }
 
 .wrapper {
@@ -511,12 +477,23 @@ body.dark .search-field i {
   color: white;
   border-radius: 12px;
   padding: 30px 40px;
-  position: relative;
   align-content: center;
   display: flex;
   align-items: center;
-  scale: 1.13;
   box-shadow: 15px 15px 25px rgba(0, 0, 0, 0.409);
+}
+
+.welcome-text {
+  color: #fff;
+  font-size: 50px;
+  z-index: 1;
+  text-align: center;
+}
+
+.welcome-message {
+  position: absolute;
+  width: 100%;
+  top: 8.5rem;
 }
 
 .wrapper form {
@@ -585,13 +562,9 @@ body.dark .search-field i {
   margin-top: 50px;
 }
 
-.user-photo-box img {
-  margin-top: px;
-}
-
 .wrapper .user-photo {
-  width: 200px;
-  height: 200px;
+  max-width: 200px;
+  max-height: 200px;
   border-radius: 12%;
   margin-bottom: 10px;
 }
@@ -666,15 +639,41 @@ body.dark .search-field i {
 }
 
 .footer {
-  position: absolute;
   width: 100%;
-  bottom: 0;
-  background-color: #101010; /* Set a light background color */
+  background-color: var(--body-color); /* Set a light background color */
   padding: 20px;
+  margin-top: 25px;
   text-align: center;
   color: #888787; /* Set the text color to be visible */
 }
 
 .footer p {
   margin: 0;
+}
+
+@media (max-width: 920px) {
+  .wrapper {
+    flex-direction: column;
+    margin-top: 5rem;
+    width: 35rem;
+  }
+  .welcome-message {
+    top: 3rem;
+  }
+  .wrapper .user-photo-box {
+    margin: 25px;
+    display: flex;
+    align-items: center;
+  }
+}
+@media (max-width: 450px) {
+  .wrapper {
+    width: 22rem;
+  }
+}
+
+@media (max-width: 400px) {
+  .wrapper {
+    width: 20rem;
+  }
 }
