--- a/WatchlistStyle.css
+++ b/WatchlistStyle.css
@@ -1,13 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Ultra&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Konkhmer+Sleokchher&display=swap");
-@font-face {
-  font-family: "Header";
-  src: url(Fonts/Lobster-Regular.ttf);
-}
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 /*-------------------------------Start Side Scroll------------------------------------------- */
-
 html {
   scrollbar-width: normal;
   scrollbar-color: #777 #0000002a;
@@ -42,10 +37,7 @@ body {
   height: 100vh;
   background-color: var(--body-color);
 }
-/* ===== Google Font Import - Poppins ===== */
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 
-/* ===== Colours ===== */
 :root {
   --body-color: #f7f7f7;
   --nav-color: #17181c;
@@ -343,6 +335,7 @@ body.dark .search-field i {
     margin-top: 20px;
   }
 }
+
 .user-pic {
   width: 35px;
   border-radius: 50%;
@@ -361,6 +354,7 @@ body.dark .search-field i {
   transition: max-height 0.4s;
   z-index: 1; /* Set a higher z-index to ensure the dropdown menu appears on top */
 }
+
 .sub-menu-wrap.open-menu {
   max-height: 500px;
 }
@@ -378,6 +372,7 @@ body.dark .search-field i {
   color: #fff;
   word-spacing: 5px;
 }
+
 .user-info h2 {
   font-size: 24px;
   text-align: center;
@@ -426,10 +421,12 @@ body.dark .search-field i {
   padding: 8px;
   margin-right: 15px;
 }
+
 .sub-menu-link span {
   font-size: 22px;
   transition: transform 0.5s;
 }
+
 .sub-menu-link:hover span {
   transform: translateX(5px);
 }
@@ -702,14 +699,115 @@ body.dark .search-field i {
   margin-left: 1rem;
 }
 
+.dots {
+  position: absolute;
+  right: 0.3rem;
+  top: 0.3rem;
+  width: 20px;
+  height: 21px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  color: #fff;
+  background: #ffffff2f;
+  font-size: 16px;
+  transition: 0.3s;
+}
+
+.dots:hover {
+  background: rgba(0, 0, 0, 0.548);
+}
+
+.dots i {
+  cursor: pointer;
+}
+
+.dropdown-container {
+  position: absolute;
+  right: 0.25rem;
+  top: 0.25rem;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+}
+
+a div {
+  width: 10rem;
+  padding: 5px;
+}
+
+.dropdown {
+  position: absolute;
+  top: 30px;
+  right: 10px;
+  font-weight: bold;
+  background-color: rgb(221, 221, 221);
+  outline: none;
+  opacity: 0;
+  z-index: -1;
+  max-height: 0;
+  border-radius: 10px;
+  transition: 0.5s;
+}
+
+.dropdown-container:focus {
+  outline: none;
+}
+
+.dropdown-container:focus .dropdown {
+  opacity: 1;
+  z-index: 100;
+  max-height: 100vh;
+}
+
 @media (max-width: 767px) {
   .container {
-    padding: 10px;
+    padding: 0px;
+    padding-top: 5px;
   }
 
-  .movie-list {
+  #movie-list {
     grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
     gap: 10px;
+  }
+}
+
+@media (max-width: 580px) {
+  .watchlist-select a {
+    font-size: 16px;
+  }
+  .watchlist-select {
+    padding-left: 0px;
+  }
+  .watchlist-select li {
+    margin: 10px;
+  }
+
+  .movie-item {
+    min-width: 185px;
+    height: 281px;
+  }
+  .movie-poster {
+    height: 100%;
+    margin: 0; /* Delete when ahrev is on the img so i would not have the space under the img on the movie items */
+    border-radius: 12px;
+  }
+  .movie-content a {
+    margin: 0;
+    padding: 0;
+  }
+
+  .movie-title {
+    display: none;
+  }
+  .movie-rating {
+    display: none;
+  }
+  .action-circle {
+    display: none !important;
   }
 }
 
