--- a/MovieTemplateStyle.css
+++ b/MovieTemplateStyle.css
@@ -44,8 +44,6 @@ body {
   height: 100vh;
   background-color: var(--body-color);
 }
-/* ===== Google Font Import - Poppins ===== */
-
 /* ===== Colours ===== */
 :root {
   --body-color: #f7f7f7;
@@ -71,7 +69,7 @@ body.dark {
   --search-bar: #242526;
   --movie-item-color: transparent;
   --stats-box: rgba(255, 255, 255, 0.3);
-  --stats-box-shadow: rgba(255, 255, 255, 0.2) 0px 30px 40px -7px;
+  --stats-box-shadow: rgb(72, 72, 72) 0px 20px 30px -10px;
   --carusel-buttons: rgba(255, 255, 255, 0.35);
   --title-names: #ffffff80;
   --title-names-text: #000000;
@@ -941,7 +939,7 @@ button:hover:after {
   border-radius: 20%;
 }
 
-.distributor-item:hover {
+.distributor-item a img:hover {
   scale: 1.2;
   transition: 0.3s;
 }
@@ -1056,7 +1054,7 @@ button:hover:after {
 
 .cast-list {
   position: relative;
-  max-width: 1100px;
+  max-width: 1300px;
   display: flex;
   flex-wrap: wrap;
   flex-grow: 1;
@@ -1269,7 +1267,6 @@ footer p {
 
 .wrapper-c {
   max-width: 1300px;
-  width: 100%;
   position: relative;
 }
 
@@ -1339,7 +1336,7 @@ footer p {
   border-radius: 12px;
   transition: 0.3s;
   position: relative;
-  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+  box-shadow: rgb(72, 72, 72) 0px 20px 30px -10px;
 }
 .carousel .card:hover {
   transform: scale(1.025);
@@ -1374,7 +1371,7 @@ footer p {
   letter-spacing: 0.5px;
   color: var(--title-names-text);
   font-weight: bold;
-  font-family: "Inter";
+  font-family: "Inter", sans-serif;
   margin: 0 1rem;
 }
 
@@ -1416,4 +1413,48 @@ footer p {
   .wrapper-c .carousel {
     grid-auto-columns: calc((100% / 1.3));
   }
+}
+
+.swiper {
+  max-width: 1300px;
+  width: 100%;
+  border-radius: 16px;
+  box-shadow: rgb(72, 72, 72) 0px 20px 30px -10px;
+  margin-top: 1.5rem;
+}
+
+.image__wrapper {
+  width: 100%;
+  position: relative;
+  padding-top: 56.25%;
+}
+
+.image__wrapper img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center top;
+}
+
+.swiper-pagination-bullet {
+  background-color: #6b0a0a96;
+}
+
+.swiper-button-prev:after,
+.swiper-button-next:after {
+  font-size: 1.5rem;
+  color: #6b0a0a96;
+}
+
+.clips {
+  border-radius: 16px;
+  text-align: center;
+  margin: 2rem 1rem;
+}
+
+.clips h1 {
+  color: var(--text-color);
 }
