--- a/index.css
+++ b/index.css
@@ -445,8 +445,7 @@ body.dark .search-field i {
   overflow: hidden;
   box-shadow: 15px 15px 25px rgba(0, 0, 0, 0.409);
   border-radius: 14px;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
+  transition: 0.3s;
   -webkit-transition-property: box-shadow, transform;
   transition-property: box-shadow, transform;
 }
@@ -758,19 +757,10 @@ h1 {
     min-width: 170px;
     height: 270px;
   }
-}
-
-.footer {
-  background-color: var(--body-color);
-  text-align: center;
-  padding: 15px;
-  box-sizing: border-box;
-}
-
-.footer-container p {
-  color: var(--text-color);
-  margin: 0;
-  padding: 0;
+  .footer-cta {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
 }
 
 /* ===================================TEST================================= */
@@ -1116,4 +1106,189 @@ h1 {
   background-color: #900d09;
   color: var(--text-color);
   border: 1px solid black;
+}
+
+/* ------------------------------------------- */
+
+.footer-section {
+  background: var(--nav-color);
+  position: relative;
+}
+.footer-cta {
+  border-bottom: 1px solid #373636;
+  padding-top: 2.5rem;
+  padding-bottom: 3rem;
+}
+@media (min-width: 768px) {
+  .col-md-4 {
+    flex: 0 0 auto;
+    width: fit-content;
+  }
+}
+.row {
+  justify-content: space-between;
+}
+.single-cta i {
+  color: #900d09;
+  font-size: 30px;
+  float: left;
+  margin-top: 8px;
+}
+.single-cta {
+  margin: 0.35rem;
+}
+.cta-text {
+  padding-left: 15px;
+  display: inline-block;
+}
+.cta-text h4 {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 2px;
+  letter-spacing: 1px;
+}
+.cta-text span {
+  color: #757575;
+  font-size: 15px;
+  letter-spacing: 1px;
+}
+.footer-content {
+  position: relative;
+  z-index: 2;
+  border-bottom: 0.5px solid #373636;
+}
+.footer-pattern img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 330px;
+  background-size: cover;
+  background-position: 100% 100%;
+}
+.footer-logo {
+  margin-bottom: 30px;
+}
+.footer-logo img {
+  max-width: 200px;
+}
+.footer-text p {
+  margin-bottom: 14px;
+  font-size: 14px;
+  color: #7e7e7e;
+  line-height: 28px;
+}
+.footer-social-icon {
+  margin-bottom: 1rem;
+}
+.footer-social-icon span {
+  color: #fff;
+  display: block;
+  font-size: 20px;
+  font-weight: 700;
+  font-family: "Poppins", sans-serif;
+  margin-bottom: 20px;
+}
+.footer-social-icon a {
+  color: #fff;
+  font-size: 16px;
+  margin-right: 15px;
+}
+.footer-social-icon i {
+  height: 40px;
+  width: 40px;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50%;
+}
+.facebook-bg {
+  background: #3b5998;
+}
+.twitter-bg {
+  background: #55acee;
+}
+.google-bg {
+  background: #dd4b39;
+}
+.footer-widget-heading h3 {
+  color: var(--text-color);
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 40px;
+  position: relative;
+}
+.footer-widget-heading h3::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -15px;
+  height: 2px;
+  width: 50px;
+  background: #900d09;
+}
+.footer-widget ul li {
+  display: inline-block;
+  float: left;
+  width: 50%;
+  margin-bottom: 12px;
+}
+.footer-widget ul li a:hover {
+  color: #900d09;
+}
+.footer-widget ul li a {
+  color: #878787;
+  text-transform: capitalize;
+}
+.subscribe-form {
+  position: relative;
+  overflow: hidden;
+  border-radius: 14px;
+}
+.subscribe-form input {
+  width: 100%;
+  padding: 14px 28px;
+  background: #2e2e2e;
+  border: 1px solid #2e2e2e;
+  color: #fff;
+}
+.subscribe-form button {
+  position: absolute;
+  right: 0;
+  background: #900d09;
+  padding: 13px 20px;
+  border: 1px solid #900d09;
+  top: 0;
+}
+.subscribe-form button i {
+  color: #fff;
+  font-size: 22px;
+  transform: rotate(-6deg);
+}
+.copyright-area {
+  background: var(--nav-color);
+}
+.copyright-text p {
+  margin: 0;
+  font-size: 14px;
+  color: #878787;
+}
+.copyright-text p a {
+  color: #900d09;
+}
+.footer-menu li {
+  display: inline-block;
+  margin-left: 20px;
+}
+.footer-menu li:hover a {
+  color: #900d09;
+}
+.footer-menu li a {
+  font-size: 14px;
+  color: #878787;
+}
+@media (max-width: 450px) {
+  .footer-cta {
+    padding-top: 2rem;
+    padding-bottom: 2.5rem;
+  }
 }
