--- a/WatchlistStyle.css
+++ b/WatchlistStyle.css
@@ -540,9 +540,10 @@ body.dark .search-field i {
 #movie-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
   width: 100%;
   justify-content: center;
+  grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+  gap: 15px;
 }
 
 #movie-list:hover > .movie-item::after {
@@ -556,7 +557,6 @@ body.dark .search-field i {
   border-radius: 12px 12px 12px 12px;
   box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
@@ -564,11 +564,11 @@ body.dark .search-field i {
   transition-duration: 0.3s;
   -webkit-transition-property: box-shadow, transform;
   transition-property: box-shadow, transform;
-  display: flex;
   height: 525px;
   flex-direction: column;
   position: relative;
-  min-width: 280px;
+  min-width: 264px;
+  transition: 0.2s;
 }
 
 .movie-item:hover::before {
@@ -630,11 +630,11 @@ body.dark .search-field i {
   font-weight: bold;
   color: var(--text-color);
   display: flex;
-  flex-direction: column; /* Display the title as a column */
+  flex-direction: column;
   justify-content: center;
-  align-items: center; /* Set a fixed height for the container */
-  height: 45px; /* Adjust this value as needed */
-  overflow: hidden; /* Hide any overflowing content */
+  align-items: center;
+  height: 45px;
+  overflow: hidden;
   margin-bottom: 0;
 }
 
@@ -655,9 +655,9 @@ body.dark .search-field i {
 .movie-poster {
   cursor: pointer;
   margin-bottom: 5px;
-  height: 375px; /* Set a fixed height for the movie posters */
-  object-fit: cover; /* Ensure the images maintain their aspect ratio and cover the container */
+  height: 375px;
   width: 100%;
+  object-fit: cover;
   border-radius: 12px 12px 0px 0px;
 }
 
@@ -676,7 +676,7 @@ body.dark .search-field i {
 
 .movie-rating-text {
   font-size: 14px;
-  color: #888;
+  color: var(--text-color-info);
   flex: 1;
   text-align: left;
   margin-left: 1.4rem;
@@ -687,6 +687,7 @@ body.dark .search-field i {
   margin-right: 0.4rem;
   height: 18px;
 }
+
 .ratings-container {
   display: flex;
   flex-direction: column;
@@ -695,7 +696,7 @@ body.dark .search-field i {
 
 .movie-year-text {
   font-size: 14px;
-  color: #888;
+  color: var(--text-color-info);
   flex: 1;
   text-align: right;
   width: 50%;
@@ -703,117 +704,153 @@ body.dark .search-field i {
   justify-content: center;
   margin-left: 1rem;
 }
-
-.dots {
+.new-label {
   position: absolute;
-  right: 0.3rem;
-  top: 0.3rem;
-  width: 20px;
-  height: 21px;
+  right: 0.5rem;
+  top: 0.5rem;
+  border-radius: 4px;
+  color: var(--new-label-text);
+  background: var(--new-lable);
+  padding: 1.5px 4.5px;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 5px;
-  color: #fff;
-  background: #ffffff2f;
-  font-size: 16px;
-  transition: 0.3s;
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 2px 2px,
+    rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 12px 8px,
+    rgba(0, 0, 0, 0.09) 0px 30px 16px;
 }
-
-.dots:hover {
-  background: rgba(0, 0, 0, 0.548);
-}
-
-.dots i {
-  cursor: pointer;
-}
-
-.dropdown-container {
-  position: absolute;
-  right: 0.25rem;
-  top: 0.25rem;
-}
-
-a {
-  text-decoration: none;
-  color: rgb(0, 0, 0);
-}
-
-a div {
-  width: 10rem;
-  padding: 5px;
-}
-
-.dropdown {
-  position: absolute;
-  top: 30px;
-  right: 10px;
+.new-label p {
+  font-family: "Inter", sans-serif;
+  font-size: 12px;
   font-weight: bold;
-  background-color: rgb(221, 221, 221);
-  outline: none;
+  letter-spacing: 0.5px;
+  margin: 0;
+  padding: 0;
+}
+
+/* ===================================TEST================================= */
+
+.action-circle {
+  display: inline-flex;
+  /*   position: absolute;
+ */
+  bottom: 15px;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 15px;
+}
+
+.action-circle .icon {
+  margin: 0 9px;
+  text-align: center;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  position: relative;
+  z-index: 2;
+  transition: 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.action-circle .icon span {
+  display: block;
+  height: 40px;
+  width: 40px;
+  background: #101010;
+  border-radius: 50%;
+  position: relative;
+  z-index: 2;
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.3);
+  transition: 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.action-circle .icon span i {
+  line-height: 40px;
+  font-size: 20px;
+}
+
+.action-circle a {
+  color: #fff;
+}
+
+.action-circle .icon .tooltip {
+  position: absolute;
+  top: 0;
+  z-index: 1;
+  background: #fff;
+  color: #fff;
+  padding: 8px 15px;
+  white-space: nowrap; /* Prevent text from wrapping */
+  font-size: 16px;
+  font-weight: 500;
+  text-align: center;
+  border-radius: 25px;
   opacity: 0;
-  z-index: -1;
-  max-height: 0;
-  border-radius: 10px;
-  transition: 0.5s;
+  pointer-events: none;
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
+  transition: 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
-.dropdown-container:focus {
-  outline: none;
-}
-
-.dropdown-container:focus .dropdown {
+.action-circle .icon:hover .tooltip {
+  top: -58px;
   opacity: 1;
-  z-index: 100;
-  max-height: 100vh;
+  pointer-events: auto;
 }
 
-@media (max-width: 767px) {
-  .container {
-    padding: 0px;
-    padding-top: 5px;
-  }
-
-  #movie-list {
-    grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
-    gap: 10px;
-  }
+.icon .tooltip:before {
+  position: absolute;
+  content: "";
+  height: 10px;
+  width: 10px;
+  background: #fff;
+  left: 50%;
+  bottom: -6px;
+  transform: translateX(-50%) rotate(45deg);
+  transition: 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
-@media (max-width: 580px) {
-  .watchlist-select a {
-    font-size: 16px;
-  }
-  .watchlist-select {
-    padding-left: 0px;
-  }
-  .watchlist-select li {
-    margin: 10px;
-  }
+.action-circle .icon:hover span {
+  color: #fff;
+}
 
-  .movie-item {
-    min-width: 185px;
-    height: 281px;
-  }
-  .movie-poster {
-    height: 100%;
-    margin: 0; /* Delete when ahrev is on the img so i would not have the space under the img on the movie items */
-    border-radius: 12px;
-  }
-  .movie-content a {
-    margin: 0;
-    padding: 0;
-  }
+.action-circle .icon:hover span,
+.action-circle .icon:hover .tooltip {
+  text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.4);
+}
 
-  .movie-title {
-    display: none;
-  }
-  .movie-rating {
-    display: none;
-  }
-  .action-circle {
-    display: none !important;
-  }
+.action-circle .AddFavorite:hover span,
+.action-circle .AddFavorite:hover .tooltip,
+.action-circle .AddFavorite:hover .tooltip:before {
+  background: #690000;
+}
+
+.red-heart {
+  color: #b92222;
+}
+
+.action-circle .RateIt:hover span,
+.action-circle .RateIt:hover .tooltip,
+.action-circle .RateIt:hover .tooltip:before {
+  background: #c79800;
+}
+
+.action-circle .watchlist:hover span,
+.action-circle .watchlist:hover .tooltip,
+.action-circle .watchlist:hover .tooltip:before {
+  background: #002366;
+}
+
+.action-circle > a.icon.watchlist > span > i {
+  font-size: 28px;
+}
+
+.action-circle .youtube:hover span,
+.action-circle .youtube:hover .tooltip,
+.action-circle .youtube:hover .tooltip:before {
+  background: #b92222;
 }
 
 /* ------------------------------------------- */
@@ -1302,4 +1339,63 @@ a div {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@media (max-width: 1100px) {
+  .movie-item {
+    min-width: 176px;
+    height: 275px;
+  }
+  .movie-poster {
+    height: 100%;
+    margin: 0;
+    border-radius: 12px;
+  }
+  #movie-list {
+    gap: 10px;
+  }
+  h1 {
+    margin-left: 10px;
+    font-size: 26px;
+  }
+  .movie-title {
+    display: none;
+  }
+  .movie-rating {
+    display: none;
+  }
+  .action-circle {
+    display: none !important;
+  }
+  .container {
+    padding: 7px;
+  }
+}
+
+@media (max-width: 767px) {
+}
+
+@media (max-width: 390px) {
+  .movie-item {
+    min-width: 170px;
+    height: 270px;
+  }
+  .footer-cta {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
+}
+
+@media (max-width: 365px) {
+  .movie-item {
+    min-width: 165px;
+    height: 265px;
+  }
+  #movie-list {
+    grid-template-columns: repeat(auto-fill, minmax(165px, 1fr));
+    gap: 10px;
+  }
+  .navLogo img {
+    height: 25px;
+  }
 }
