--- a/WatchlistStyle.css
+++ b/WatchlistStyle.css
@@ -47,6 +47,9 @@ body {
   --search-bar: #f2f2f2;
   --search-text: #17181c;
   --movie-item-color: #ffffff;
+  --new-lable: #900d09;
+  --new-label-text: #fff;
+  --text-color-info: #17181c;
 }
 
 body.dark {
@@ -57,6 +60,9 @@ body.dark {
   --text-color-nav: #ffffff96;
   --search-bar: #242526;
   --movie-item-color: transparent;
+  --new-lable: #ffffff;
+  --new-label-text: #900d09;
+  --text-color-info: #aeaeae;
 }
 
 nav {
