--- a/MultiMediaStyle.css
+++ b/MultiMediaStyle.css
@@ -32,14 +32,14 @@ html::-webkit-scrollbar-track:hover {
 
 /* ===== Colours ===== */
 :root {
-  --body-color: #f7f8fa;
+  --body-color: #101010;
   --nav-color: #17181c;
   --side-nav: #17181c;
-  --text-color: #17181c;
+  --text-color: #ffffff;
   --navtext-color: #ffffff96;
   --search-bar: #f2f2f2;
   --search-text: #17181c;
-  --movie-item-color: #ffffff;
+  --movie-item-color: transparent;
   --new-lable: #900d09;
   --new-label-text: #fff;
 }
